issue/client-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: /1
                route:
                  prefix_rewrite: /
                  cluster: h2server
              - match:
                  prefix: /2
                route:
                  prefix_rewrite: /
                  cluster: h1server1
              - match:
                  prefix: /3
                route:
                  prefix_rewrite: /
                  cluster: h1server2
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: h2server
    connect_timeout: 0.25s
    type: strict_dns
    respect_dns_ttl: true
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: h2server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nghttp2.com    # nghttp2.org
                port_value: 80
  - name: h1server1
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: h1server1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 52.73.47.183    # httpbin.org
                port_value: 80
  - name: h1server2
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    load_assignment:
      cluster_name: h1server2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 52.73.47.183    # httpbin.org
                port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
